--- a/optionSimul.html
+++ b/optionSimul.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
-<title>바이탈 브레스 디지바이스 V — 옵션 변경 & 기대값 계산기</title>
+<title>장비별 옵션 변경 & 기대값 계산기</title>
 <style>
 body { font-family: Arial, Helvetica, sans-serif; background:#071126; color:#e6f0ff; padding:20px; }
 .container { max-width:1000px; margin:0 auto; background:#0f1f33; padding:18px; border-radius:12px; box-shadow:0 6px 24px rgba(0,0,0,0.6); }
@@ -18,15 +18,25 @@ th { background:rgba(255,255,255,0.03); color:#cfe3ff; }
 .locked { background:#fb7185 !important; color:white; }
 .results { margin-top:14px; padding:12px; background:rgba(255,255,255,0.03); border-radius:8px; }
 .results p { margin:6px 0; }
-select { padding:6px; border-radius:6px; background:#0b1220; color:#e6f0ff; border:1px solid rgba(255,255,255,0.06); margin-bottom:4px; width:160px; }
+select { padding:6px; border-radius:6px; background:#0b1220; color:#e6f0ff; border:1px solid rgba(255,255,255,0.06); margin-bottom:4px; width:180px; }
 .flex-col { display:flex; flex-direction:column; gap:4px; }
 </style>
 </head>
 <body>
 <div class="container">
-<h1>바이탈 브레스 디지바이스 V — 옵션 변경 & 기대값 계산기</h1>
+<h1>장비별 옵션 변경 & 기대값 계산기</h1>
 
-<!-- 상단: 실제 옵션 변경 -->
+<!-- 장비 선택 -->
+<div class="row">
+  <div class="col">
+    <label for="equipSelect">장비 선택:</label>
+    <select id="equipSelect"></select>
+  </div>
+</div>
+
+<hr style="margin:10px 0; border-color:rgba(255,255,255,0.04)">
+
+<!-- 상단: 옵션 변경 -->
 <h3>옵션 변경 (리롤용)</h3>
 <div class="row">
   <div class="col">
@@ -62,25 +72,51 @@ select { padding:6px; border-radius:6px; background:#0b1220; color:#e6f0ff; bord
 </div>
 
 <script>
-// 옵션 정의
-const OPTION_LIMITS = {
-  "공격력":2, "방어력":2, "최대체력":2, "디지소울":2,
-  "스킬피해":2, "크리티컬":2, "치명피해":2, "회피":2, "적중도":2,
-  "방어력%":1, "최대 DS 증가%":1, "최대 HP 증가%":1,
-  "스킬 데미지 증가%":1, "최종 데미지 증가%":1
+// 장비별 옵션 정의
+const EQUIP_OPTIONS = {
+  "바이탈 브레스 디지바이스 V": {
+    "공격력":2, "방어력":2, "최대체력":2, "디지소울":2,
+    "스킬피해":2, "크리티컬":2, "치명피해":2, "회피":2, "적중도":2,
+    "방어력%":1, "최대 DS 증가%":1, "최대 HP 증가%":1,
+    "스킬 데미지 증가%":1, "최종 데미지 증가%":1
+  },
+  "화려한 친절의 이어링": {
+    "방어력":3, "최대체력":2, "디지소울":2, "스킬피해":2,
+    "기본속성피해":2, "크리티컬":2, "치명피해":2, "회피":2,
+    "블럭":2, "적중도":1, "방어력(%)":1, "최대 HP증가(%)":1,
+    "최대 DS증가(%)":1, "스킬데미지증가(%)":1
+  }
 };
-const OPTION_NAMES = Object.keys(OPTION_LIMITS);
+
+let currentEquip = "바이탈 브레스 디지바이스 V";
+let OPTION_NAMES = Object.keys(EQUIP_OPTIONS[currentEquip]);
 
 // 상단 슬롯 상태
-let slots = [
-  {value:"", locked:false},
-  {value:"", locked:false},
-  {value:"", locked:false},
-  {value:"", locked:false},
-  {value:"", locked:false}
-];
-
+let slots = Array(5).fill(0).map(_=>({value:"", locked:false}));
 let totalStoneUsed = 0;
+
+// 하단 기대값 계산용 슬롯
+let expectSlots = Array(5).fill(0).map(_=>({value:"", locked:false}));
+
+// 장비 선택 UI
+function renderEquipSelect(){
+  const sel = document.getElementById("equipSelect");
+  sel.innerHTML="";
+  Object.keys(EQUIP_OPTIONS).forEach(name=>{
+    const opt=document.createElement("option");
+    opt.value=name; opt.innerText=name;
+    sel.appendChild(opt);
+  });
+  sel.value=currentEquip;
+  sel.onchange=()=>{
+    currentEquip = sel.value;
+    OPTION_NAMES = Object.keys(EQUIP_OPTIONS[currentEquip]);
+    fillInitial();
+    renderExpectUI();
+    totalStoneUsed=0;
+    updateStoneBox();
+  };
+}
 
 // 상단 슬롯 렌더
 function renderSlots(){
@@ -111,19 +147,11 @@ function renderSlots(){
 function rerollUnlocked(){
   const lockedValues = slots.filter(s=>s.locked).map(s=>s.value).filter(Boolean);
   let pool = shuffle(buildPool(lockedValues));
-  for(let i=0;i<5;i++){
-    if(slots[i].locked) continue;
-    slots[i].value = pool.length? pool.shift():"";
-  }
-
-  const currentLockCount = slots.filter(s=>s.locked).length;
-  let stoneUsedThisRoll = 1;
-  if(currentLockCount === 1) stoneUsedThisRoll = 2;
-  else if(currentLockCount === 2) stoneUsedThisRoll = 5;
+  for(let i=0;i<5;i++){ if(!slots[i].locked) slots[i].value=pool.length? pool.shift():""; }
+  const lockCount = slots.filter(s=>s.locked).length;
+  const stoneUsedThisRoll = lockCount===0?1:lockCount===1?2:5;
   totalStoneUsed += stoneUsedThisRoll;
-
-  renderSlots();
-  updateStoneBox();
+  renderSlots(); updateStoneBox();
 }
 
 function updateStoneBox(){
@@ -131,10 +159,9 @@ function updateStoneBox(){
 }
 
 function resetAll(){
-  for(let i=0;i<5;i++){ slots[i].value=""; slots[i].locked=false; }
+  slots.forEach(s=>{s.value=""; s.locked=false;});
   fillInitial();
-  totalStoneUsed = 0;
-  updateStoneBox();
+  totalStoneUsed=0; updateStoneBox();
 }
 
 // 풀 생성
@@ -142,7 +169,8 @@ function buildPool(excludeUsed=[]){
   const pool=[]; const used={};
   excludeUsed.forEach(v=>{ if(v) used[v]=(used[v]||0)+1; });
   for(const name of OPTION_NAMES){
-    const allowed=OPTION_LIMITS[name]; const usedCount=used[name]||0;
+    const allowed=EQUIP_OPTIONS[currentEquip][name]; 
+    const usedCount=used[name]||0;
     const remain=Math.max(allowed-usedCount,0);
     for(let i=0;i<remain;i++) pool.push(name);
   }
@@ -150,33 +178,16 @@ function buildPool(excludeUsed=[]){
 }
 
 // shuffle
-function shuffle(arr){
-  for(let i=arr.length-1;i>0;i--){
-    const j=Math.floor(Math.random()*(i+1));
-    [arr[i],arr[j]]=[arr[j],arr[i]];
-  }
-  return arr;
-}
+function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];} return arr;}
 
 // 초기값 채우기
 function fillInitial(){
   let pool=shuffle(buildPool([]));
-  for(let i=0;i<5;i++){
-    slots[i].value=pool.length? pool.shift():"";
-    slots[i].locked=false;
-  }
+  for(let i=0;i<5;i++){ slots[i].value=pool.length? pool.shift():""; slots[i].locked=false; }
   renderSlots();
 }
 
 // 하단 기대값 계산용 UI
-let expectSlots = [
-  {locked:false, value:""},
-  {locked:false, value:""},
-  {locked:false, value:""},
-  {locked:false, value:""},
-  {locked:false, value:""}
-];
-
 function renderExpectUI(){
   const tbody=document.getElementById("expectTbody");
   tbody.innerHTML="";
@@ -205,12 +216,9 @@ function computeExpectation(){
   const desired=expectSlots.map(s=>s.value);
   if(desired.some(v=>v==="")){ alert("모든 슬롯에 원하는 옵션을 선택하세요."); return; }
   const lockedValues = expectSlots.filter(s=>s.locked).map(s=>s.value);
-  // 풀 생성
   const pool=buildPool(lockedValues);
-  const counts={};
-  pool.forEach(x=>counts[x]=(counts[x]||0)+1);
-  let N=pool.length;
-  let p=1;
+  const counts={}; pool.forEach(x=>counts[x]=(counts[x]||0)+1);
+  let N=pool.length; let p=1;
   for(let i=0;i<5;i++){
     if(expectSlots[i].locked) continue;
     const val=expectSlots[i].value;
@@ -223,15 +231,10 @@ function computeExpectation(){
   const stonePerTry = lockCount===0?1:lockCount===1?2:5;
   const expectedTrials = p===0?Infinity:1/p;
   const expectedStone = expectedTrials*stonePerTry;
-
   const fmtPct=x=> (x*100).toFixed(6)+"%";
   const fmtNum=x=> !isFinite(x)?"무한":x>=1e6?Math.round(x).toLocaleString():Number(x.toFixed(2)).toLocaleString();
-
   const box=document.getElementById("resultBox");
-  if(p===0){
-    box.innerHTML="<p><strong>결과:</strong> 현재 잠금 상태에서는 원하는 조건을 만족하는 것이 불가능합니다.</p>";
-    return;
-  }
+  if(p===0){ box.innerHTML="<p><strong>결과:</strong> 현재 잠금 상태에서는 원하는 조건을 만족하는 것이 불가능합니다.</p>"; return; }
   box.innerHTML=`
     <p><strong>잠금 수:</strong> ${lockCount}개</p>
     <p><strong>단일 시도 성공 확률:</strong> ${fmtPct(p)}</p>
@@ -243,6 +246,7 @@ function computeExpectation(){
 
 // 초기화
 function init(){
+  renderEquipSelect();
   fillInitial();
   renderExpectUI();
 }
